--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
         "vue-loader": "^16.8.3",
         "vuex": "^4.0.2"
     },
-    "dependencies": {}
+    "dependencies": {
+        "cross-env": "^7.0.3",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.56.2",
+        "sass-loader": "^13.2.0"
+    }
 }
