--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@vue/compiler-sfc": "^3.2.22",
         "laravel-mix": "^6.0.41",
+        "lodash": "^4.17.21",
         "postcss": "^8.3.11",
         "vue-loader": "^16.8.3",
         "vuex": "^4.0.2"
