Refactor package and SVG, Image, HTML & icon height methods

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /.idea
-/.vscode
-/.vs
-/node_modules
 /vendor
-/compare
+/node_modules
+package-lock.json
+composer.phar
+composer.lock
+phpunit.xml
+.phpunit.result.cache
+.DS_Store
+Thumbs.db
