--- a/package.json
+++ b/package.json
@@ -7,20 +7,18 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "nova:install": "npm --prefix='../../vendor/laravel/nova' ci"
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.2.22",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.21",
         "postcss": "^8.3.11",
-        "vue-loader": "^16.8.3",
-        "vuex": "^4.0.2"
-    },
-    "dependencies": {
-        "cross-env": "^7.0.3",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.2",
-        "sass-loader": "^13.2.0"
+        "sass-loader": "^13.2.0",
+        "vue-loader": "^16.8.3",
+        "vuex": "^4.1.0"
     }
 }
