--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
         "prod": "npm run production",
         "production": "mix --production",
         "nova:install": "npm --prefix='../../vendor/laravel/nova' ci",
-        "build:fa": "mix --mix-config=webpack.fa.mix.js --production"
+        "build:fa": "mix --mix-config=webpack.fa.mix.js --production",
+        "build:tw": "mix --mix-config=webpack.tw.mix.js --production"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@vue/compiler-sfc": "^3.2.22",
+        "autoprefixer": "^10.4.14",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.21",
-        "postcss": "^8.3.11",
+        "postcss": "^8.4.21",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.2",
         "sass-loader": "^13.2.0",
+        "tailwindcss": "^3.3.1",
         "vue-loader": "^16.8.3",
         "vuex": "^4.1.0"
     }
