--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -1,6 +1,5 @@
-Getting starting:
+Main:
   Installation: installation.md
-Usage:
   Use Heroicon Icons: heroicon.md
   Use Font Awesome Icon: font-awesome.md
   Use SVG Icon: svg.md
