Change docs link in composer.json

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "support": {
         "issues": "https://github.com/Muetze42/nova-menu/issues",
         "source": "https://github.com/Muetze42/nova-menu",
-        "docs": "https://github.com/Muetze42/nova-menu#readme"
+        "docs": "https://docs.huth.it/nova-menu"
     },
     "license": "MIT",
     "authors": [
