Menu `iframe` method

--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -7,3 +7,4 @@ Main:
   Use HTML Code As Icon: html.md
   Customize Menu And Icons: customize.md
   Menu Card: card.md
+  Iframe Popup: iframe-popup.md
