--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -8,3 +8,4 @@ Main:
   Customize Menu And Icons: customize.md
   Menu Card: card.md
   Iframe Popup: iframe-popup.md
+  Menu Filter: menu-filter.md
