--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         }
     ],
     "require": {
+        "php": "^8.0",
         "laravel/nova": "^4.12.13",
-        "php": "^8.0"
+        "norman-huth/nova-basic-package": "^1.0.1"
     },
     "autoload": {
         "psr-4": {
