--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
+        "@inertiajs/inertia": "^0.11.0",
         "@vue/compiler-sfc": "^3.2.22",
         "autoprefixer": "^10.4.14",
         "laravel-mix": "^6.0.41",
