--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -8,4 +8,6 @@ Main:
   Customize Menu And Icons: customize.md
   Menu Card: card.md
   Iframe Popup: iframe-popup.md
+  Menu Disclosure: disclosure.md
   Menu Filter: menu-filter.md
+  Without Filter: unfiltered-elements.md
