--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@headlessui/vue": "^1.7.13",
         "@inertiajs/inertia": "^0.11.0",
+        "@norman-huth/helpers-collection-js": "^0.0.7",
         "@vue/compiler-sfc": "^3.2.22",
         "autoprefixer": "^10.4.14",
         "laravel-mix": "^6.0.41",
