--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "nova:install": "npm --prefix='../../vendor/laravel/nova' ci",
+        "nova:install": "npm --prefix='../../laravel/nova' ci",
         "build:tw": "mix --mix-config=webpack.tw.mix.js --production"
     },
     "dependencies": {
@@ -27,5 +27,10 @@
         "tailwindcss": "^3.3.1",
         "vue-loader": "^16.8.3",
         "vuex": "^4.1.0"
+    },
+    "devDependencies": {
+        "@vue/eslint-config-prettier": "^8.0.0",
+        "eslint": "^8.51.0",
+        "eslint-plugin-vue": "^9.17.0"
     }
 }
