--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@vue/compiler-sfc": "^3.2.22",
         "autoprefixer": "^10.4.14",
         "laravel-mix": "^6.0.41",
+        "laravel-nova-ui": "^0.4.11",
         "lodash": "^4.17.21",
         "postcss": "^8.4.21",
         "resolve-url-loader": "^5.0.0",
