--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,14 @@
     "require": {
         "php": "^8.0",
         "laravel/nova": "^4.27.14",
-        "norman-huth/nova-basic-package": "^1.2.6"
+        "norman-huth/nova-basic-package": "^1.2.6",
+        "nova-kit/nova-packages-tool": "^1.17"
+    },
+    "repositories": {
+        "nova": {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
     },
     "autoload": {
         "psr-4": {
