--- a/package.json
+++ b/package.json
@@ -5,33 +5,24 @@
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production",
-        "nova:install": "npm --prefix='../../laravel/nova' ci",
-        "build:tw": "mix --mix-config=webpack.tw.mix.js --production"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.4.0",
-        "@headlessui/vue": "^1.7.13",
-        "@inertiajs/inertia": "^0.11.0",
-        "@norman-huth/helpers-collection-js": "^0.0.7",
-        "@vue/compiler-sfc": "^3.2.22",
-        "autoprefixer": "^10.4.14",
-        "laravel-mix": "^6.0.41",
-        "laravel-nova-ui": "^0.4.11",
-        "lodash": "^4.17.21",
-        "postcss": "^8.4.21",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.56.2",
-        "sass-loader": "^13.2.0",
-        "tailwindcss": "^3.3.1",
-        "vue-loader": "^16.8.3",
-        "vuex": "^4.1.0"
+        "production": "mix --production"
     },
     "devDependencies": {
-        "@vue/eslint-config-prettier": "^8.0.0",
-        "eslint": "^8.51.0",
-        "eslint-plugin-vue": "^9.17.0"
+        "@headlessui/vue": "^1.7.23",
+        "@inertiajs/inertia": "^0.11.1",
+        "@vue/compiler-sfc": "^3.5.13",
+        "laravel-mix": "^6.0.49",
+        "laravel-nova-devtool": "file:vendor/laravel/nova-devtool",
+        "lodash": "^4.17.21",
+        "postcss": "^8.5.1",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.83.4",
+        "sass-loader": "^16.0.4",
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5.7.3",
+        "vue": "^3.5.13",
+        "vue-loader": "^17.4.2",
+        "vuex": "^4.1.0"
     }
 }
