--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "devDependencies": {
         "@headlessui/vue": "^1.7.23",
         "@inertiajs/inertia": "^0.11.1",
+        "@types/lodash": "^4.17.7",
         "@vue/compiler-sfc": "^3.5.13",
         "laravel-mix": "^6.0.49",
         "laravel-nova-devtool": "file:vendor/laravel/nova-devtool",
